팝업창 성공

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
+    <string name="facebook_app_id">877784412679448</string>
+    <string name="fb_login_protocol_scheme">fb877784412679448</string>
     <string name="app_name">AndroidProject</string>
     <string name="title_activity_scrolling">ScrollingActivity</string>
     <string name="large_text">
